@@ -1,0 +1,23 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<html>
+<head>
+<title>Table-Width Problem</title>
+</head>
+<body>
+<p>This tests the interaction of overflow on some very wide text with
+auto table layout. The CSS 2.1 spec does not define how overflow
+interacts with intrinsic width, so we copy the IE behavior. Therefore
+the lines should come out very very wide and scroll along with the
+border.</p>
+<table style="border: 1px solid red; width: 80%">
+<tr>
+<td>
+<pre style="overflow:auto; border: 1px solid blue">
+this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line 
+this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line this is a very long line 
+</pre>
+</td>
+</tr>
+</table>
+</body>
+</html>
